--- a/index.html
+++ b/index.html
@@ -3,17 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+     <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
     <title>Geolocalizador</title>
     <style>
         html, body {
             font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
         }
+
+        .localizacao {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        #mapid {
+            height: 300px;
+            width: 50%;
+         }
     </style>
 </head>
 <body>
-    <h1>Qual é a sua localização</h1>
-    <h2></h2>
-    <script src="./script.js"></script>
+    <div class="localizacao">
+        <h1>Qual é a sua localização?</h1>
+        <h2></h2>
+        <div id="mapid"></div>
+        <script src="./script.js"></script>
+    </div>
 </body>
 </html>
